<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ui.creditsAndLegal.CreditsAndLegalFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="60dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/creditsTitle"
                    style="@style/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/creditsFragmentTitle" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/creditsTOS"
                        style="@style/regularText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/creditsFragmentLegal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/creditsAuthor"
                            style="@style/regularText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/creditsFragemntAuthor" />

                        <TextView
                            android:id="@+id/creditsYear"
                            style="@style/regularText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/creditsFragemntYear" />

                        <TextView
                            android:id="@+id/creditsVersion"
                            style="@style/regularText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/creditsFragementVersion" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>